--- a/index.html
+++ b/index.html
@@ -1,9 +1,73 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>.NET Digetst newsletter</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Newsletter</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+    <link href="styles/main.css" rel="stylesheet">
 </head>
 <body>
+    <!-- Header -->
+    <header class="bg-light py-3 fixed-top">
+        <div class="container d-flex justify-content-between align-items-center">
+            <div class="logo">
+                <h1>Logo</h1>
+            </div>
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Subscribe</a></li>
+                        <li class="nav-item">
+                            <button id="dark-mode-toggle" class="btn btn-link nav-link">
+                                <i id="dark-mode-icon" class="fas fa-moon"></i>
+                            </button>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
 
+    <!-- Main Content -->
+    <main class="container my-5">
+        <h2>Welcome to our Newsletter</h2>
+        <p>This is a simple and lightweight newsletter website.</p>
+    </main>
+
+    <!-- Footer -->
+    <footer class="bg-light py-3">
+        <div class="container d-flex justify-content-between align-items-center">
+            <div class="copyright">
+                <p>&copy; 2023 Your Company</p>
+            </div>
+            <div class="social-media">
+                <a href="#" class="text-dark mx-2"><i class="fab fa-linkedin"></i></a>
+                <a href="#" class="text-dark mx-2"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="text-dark mx-2"><i class="fab fa-facebook"></i></a>
+                <a href="#" class="text-dark mx-2"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="text-dark mx-2"><i class="fab fa-tiktok"></i></a>
+                <a href="#" class="text-dark mx-2"><i class="fab fa-youtube"></i></a>
+                <a href="#" class="text-dark mx-2"><i class="fab fa-pinterest"></i></a>
+                <a href="#" class="text-dark mx-2"><i class="fab fa-github"></i></a>
+            </div>
+        </div>
+        <hr>
+        <div class="container d-flex justify-content-between">
+            <a href="#" class="text-dark">Terms of Service</a>
+            <a href="#" class="text-dark">GDPR</a>
+        </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
