--- a/index.html
+++ b/index.html
@@ -1,130 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Stay updated with the latest news and updates in the .NET world with The .NET Insider newsletter.">
-    <meta name="author" content="Levan Jintcharadze">
-    <meta name="keywords" content=".NET, .NET news, .NET updates, .NET newsletter, C#, software development, programming, .NET developer, ASP.NET, Microsoft technologies, developer news">
-    <title>The .NET Insider | Newsletter</title>
-
-    <!-- Google Meta Tags -->
-    <meta itemprop="name" content="The .NET Insider | Newsletter">
-    <meta itemprop="description" content="Stay updated with the latest news and updates in the .NET world with The .NET Insider newsletter.">
-    <meta itemprop="image" content="https://your-domain.com/assets/og-image.jpg">
-
-    <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="The .NET Insider | Newsletter">
-    <meta property="og:description" content="Stay updated with the latest news and updates in the .NET world with The .NET Insider newsletter.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://your-domain.com">
-    <meta property="og:image" content="https://your-domain.com/assets/og-image.jpg">
-    <meta property="og:site_name" content="The .NET Insider">
-    <meta property="og:locale" content="en_US">
-
-    <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="The .NET Insider | Newsletter">
-    <meta name="twitter:description" content="Stay updated with the latest news and updates in the .NET world with The .NET Insider newsletter.">
-    <meta name="twitter:image" content="https://your-domain.com/assets/og-image.jpg">
-    <meta name="twitter:site" content="@dotnetdevs_io">
-
-    <!--Boootsrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- Custom CSS -->
-    <link href="styles/main.css" rel="stylesheet">
-</head>
-<body>
-    <!-- Header -->
-    <header class="bg-light py-3 fixed-top">
-        <div class="container d-flex justify-content-between align-items-center">
-            <div class="logo">
-                <h1>Logo</h1>
-            </div>
-            <nav class="navbar navbar-expand-lg navbar-light">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Subscribe</a></li>
-                        <li class="nav-item">
-                            <button id="dark-mode-toggle" class="btn btn-link nav-link" title="Toggle Dark Mode">
-                                <i id="dark-mode-icon" class="fas fa-moon"></i>
-                            </button>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
-    </header>
-
-    <!-- Main Content -->, 
-    <main class="container my-5">
-        <iframe src="https://embeds.beehiiv.com/3ab70bc2-22e5-482e-b8f2-50e82c66e3b8" data-test-id="beehiiv-embed" width="100%" height="320" frameborder="0" scrolling="no" class="beehiiv-embed" title="Newsletter Embed"></iframe>
-
-        <section class="testimonials my-5 bg-light dark-mode-bg-dark">
-            <h2 class="text-center mb-4">What Others Say About Our Newsletter</h2>
-            <div class="row">
-            <div class="col-md-4">
-                <div class="card dark-mode-card">
-                <div class="card-body">
-                    <p class="card-text">"The .NET Insider is my go-to source for the latest updates in the .NET world. Highly recommended!"</p>
-                    <h5 class="card-title">- John Doe, Senior Developer</h5>
-                </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card dark-mode-card">
-                <div class="card-body">
-                    <p class="card-text">"A must-read for any .NET developer. The insights and news are top-notch."</p>
-                    <h5 class="card-title">- Jane Smith, Software Engineer</h5>
-                </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card dark-mode-card">
-                <div class="card-body">
-                    <p class="card-text">"I always look forward to the next issue of The .NET Insider. It's packed with valuable information."</p>
-                    <h5 class="card-title">- Alex Johnson, Tech Lead</h5>
-                </div>
-                </div>
-            </div>
-            </div>
-        </section>
-    </main>
-
-    <!-- Footer -->
-    <footer class="bg-light py-3">
-        <div class="container d-flex justify-content-between align-items-center">
-            <div class="copyright">
-                <p>&copy; 2023 Your Company</p>
-            </div>
-            <div class="social-media">
-                <a href="https://www.linkedin.com/company/dotnetdevs/" class="text-dark mx-2" target="_blank" rel="noopener" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                <a href="https://twitter.com/dotnetdevs_io" class="text-dark mx-2" target="_blank" rel="noopener" title="Twitter"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.facebook.com/dotnetdevsio" class="text-dark mx-2" target="_blank" rel="noopener" title="Facebook"><i class="fab fa-facebook"></i></a>
-                <a href="https://instagram.com/dotnetdevs_io" class="text-dark mx-2" target="_blank" rel="noopener" title="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="https://tiktok.com/dotnetdevs" class="text-dark mx-2" target="_blank" rel="noopener" title="TikTok"><i class="fab fa-tiktok"></i></a>
-                <a href="https://www.youtube.com/@dotnetdevs_io" class="text-dark mx-2" target="_blank" rel="noopener" title="YouTube"><i class="fab fa-youtube"></i></a>
-                <a href="https://www.pinterest.com/dotnetdevs" class="text-dark mx-2" target="_blank" rel="noopener" title="Pinterest"><i class="fab fa-pinterest"></i></a>
-                <a href="https://www.threads.net/@dotnetdevs_io" class="text-dark mx-2" target="_blank" rel="noopener" title="Threads"><i class="fab fa-threads"></i></a>
-                <a href="https://github.com/dotnetdevshq/dotnetnews" class="text-dark mx-2" target="_blank" rel="noopener" title="GitHub"><i class="fab fa-github"></i></a>
-            </div>
-        </div>
-        <hr>
-        <div class="container d-flex justify-content-between">
-            <a href="#" class="text-dark">Terms of Service</a>
-            <a href="#" class="text-dark">GDPR</a>
-        </div>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="scripts/main.js"></script>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>.NET Digest | Newsletter</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
